# Bachelor-Thesis

./: .env.example  .gitignore  LICENSE  README.md
cpp_extensions/: CMakeLists.txt  setup.py
cpp_extensions/include/: mitre_graph.hpp  pattern_matcher.hpp
cpp_extensions/src/: bindings.cpp  mitre_graph.cpp  pattern_matcher.cpp
cpp_extensions/tests/: test_cpp.py
langchain_pipeline/: config.py  inference_qwen3.5-4b.py  inference_qwen9b.py  main.py  pipeline_runner.py  requirements.txt
langchain_pipeline/agent/: agent.py  callbacks.py
langchain_pipeline/coevolution/: arena.py  blue_agent.py  elo.py  red_agent.py
langchain_pipeline/evaluation/: metrics.py  report.py  secbench.py
langchain_pipeline/feedback/: cross_platform.py  feedback_loop.py
langchain_pipeline/llm/: adapter_manager.py  mlx_wrapper.py
langchain_pipeline/mcp/: server.py
langchain_pipeline/mitre/: graph.py  planner.py
langchain_pipeline/rag/: chroma_store.py  embedder.py  retriever.py
langchain_pipeline/rag/ingestion/: exploit_db_ingestor.py  mitre_ingestor.py  nvd_ingestor.py  pipeline.py
langchain_pipeline/tools/: ioc_collector.py  security_tools.py  ssh_executor.py  vm_tools.py
tart_infra/: build_machines.sh  readme.md  setup_macos_vm.sh  setup_ubuntu_vm.sh  start_machines.sh  stop_machines.sh
utm_infra/: build_machines.sh  readme.md  setup_windows_vm.sh  start_machines.sh  stop_machines.sh
